--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server-express": "^3.12.0",
     "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
     "graphql-http": "^1.17.0",
     "mongoose": "^7.0.3"
   }
